--- a/thesis-app/src/index.html
+++ b/thesis-app/src/index.html
@@ -7,8 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script type="text/javascript" src="node_modules/auth0-js/build/auth0.js"></script>
   <link rel="icon" href="https://maxcdn.icons8.com/Share/icon/Healthcare//scissors1600.png">
   <script src="https://checkout.stripe.com/checkout.js"></script>
+
 </head>
 <body>
   <app-root>Loading...</app-root>
